# terrasiaga-rs

./: .env.example  .env.test  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  diesel.toml  docker-compose.yml
.github/workflows/: ci-localstack.yml
docs/: ARCHITECTURE_REVIEW.md  PROJECT_STRUCTURE.md  README.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-07-21-002327_installing_extention/: up.sql
migrations/2025-07-21-125402_initial_structure/: down.sql  up.sql
migrations/2025-07-21-211500_sample_data/: down.sql  up.sql
migrations/2025-07-21-215000_additional_sample_data/: up.sql
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: test.sh
src/: lib.rs  main.rs  uuid.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/dto/: mod.rs
src/application/handlers/: analytics.rs  auth.rs  emergency.rs  map.rs  mod.rs  notification.rs  user.rs
src/application/queries/: mod.rs
src/application/services/: mod.rs
src/application/use_cases/: auth.rs  disaster.rs  emergency_response.rs  mod.rs  notification.rs  user_management.rs
src/config/: app_config.rs  database.rs  env.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: disaster.rs  location.rs  mod.rs  notification.rs  user.rs
src/domain/events/: mod.rs
src/domain/ports/: events.rs  mod.rs  repositories.rs  services.rs
src/domain/services/: mod.rs
src/domain/value_objects/: address.rs  coordinates.rs  email.rs  mod.rs  phone_number.rs  user_role.rs  user_status.rs  username.rs
src/infrastructure/: advanced_macros.rs  container.rs  event_store.rs  logging.rs  macros.rs  messaging.rs  mod.rs  monitoring.rs  repository_macros.rs
src/infrastructure/cache/: mod.rs  service.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/schemas/: mod.rs
src/infrastructure/external_api/: email.rs  geo_service.rs  mod.rs  weather_api.rs  whatsapp.rs
src/infrastructure/external_services/: email.rs  geolocation.rs  mod.rs  notification.rs  notification_service.rs  sms.rs  weather.rs  whatsapp.rs
src/infrastructure/monitoring/: health.rs  mod.rs
src/infrastructure/repository/: disaster_repository.rs  location_repository.rs  mod.rs  notification_repository.rs  user_repository.rs
src/infrastructure/security/: mod.rs  paseto_service.rs  service.rs
src/middleware/: auth.rs  cors.rs  errors.rs  logging.rs  mod.rs
src/presentation/: mod.rs
src/presentation/api/: auth.rs  health.rs  mod.rs
src/presentation/api/v1/: analytics.rs  auth.rs  disasters.rs  emergency.rs  locations.rs  mod.rs  notifications.rs  users.rs
src/shared/: auth_middleware.rs  cache.rs  database.rs  error.rs  events.rs  geo_utils.rs  jwt.rs  mod.rs  paseto_auth.rs  rate_limiter.rs  response.rs  security.rs  types.rs  validation.rs
src/shared/paseto_auth/: mod.rs  utils.rs
src/shared/types/: common.rs  dto.rs  errors.rs  mod.rs  pagination.rs  results.rs
tests/: infrastructure_macros_test.rs
tests/common/: mod.rs  test_config.rs
tests/integration/: api_tests.rs  performance_tests.rs
tests/unit/: auth_use_case_tests.rs  disaster_tests.rs  user_tests.rs
